--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "ember server",
+    "start": "node_modules/.bin/ember server",
     "build": "ember build",
     "test": "ember test"
   },
