--- a/package.json
+++ b/package.json
@@ -31,19 +31,21 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.15",
     "ember-cli-release": "0.2.3",
+    "ember-cli-sass": "4.0.1",
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "express": "^4.13.1",
+    "ember-paper": "0.2.6",
     "glob": "^4.5.3",
-    "morgan": "^1.6.1"
+    "liquid-fire": "0.21.0"
   },
   "dependencies": {
     "dirStat": "0.0.2",
+    "express": "^4.13.1",
     "jsDAV": "git://github.com/mnutt/jsDAV.git",
     "jsonapi-serializer": "^1.0.4",
-    "sqlite3": "^3.0.8",
+    "morgan": "^1.6.1",
     "statvfs": "^2.1.0",
     "walker": "^1.0.7"
   }
