--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
-    "hammerjs": "~2.0.4"
+    "hammerjs": "~2.0.4",
+    "plupload": "v2.1.8"
   }
 }
