--- a/.sandstorm/Vagrantfile
+++ b/.sandstorm/Vagrantfile
@@ -59,7 +59,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     vb.cpus = cpus
     vb.memory = assign_ram_mb
 
-    override.vm.synced_folder "..", "/opt/app", type: 'nfs'
+    override.vm.synced_folder "..", "/opt/app"
     override.vm.synced_folder ENV["HOME"] + "/.sandstorm", "/host-dot-sandstorm"
     override.vm.synced_folder "..", "/vagrant"
   end
