--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "davros",
   "dependencies": {
+    "dinosheets": "0.0.1",
     "ember": "1.13.3",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
