--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-export-application-global": "^1.0.2",
     "ember-paper": "0.2.6",
     "ember-plupload": "1.13.6",
+    "ember-websockets": "1.2.3",
     "glob": "^4.5.3",
     "liquid-fire": "0.21.0"
   },
@@ -51,6 +52,7 @@
     "morgan": "^1.6.1",
     "multiparty": "4.1.2",
     "statvfs": "git://github.com/briankereszturi/node-statvfs.git#77643044210c4",
-    "walker": "^1.0.7"
+    "walker": "^1.0.7",
+    "ws": "^0.8.0"
   }
 }
