--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "ember-qunit": "0.4.1",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
+    "matchMedia": "0.2.0",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
