--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-paper": "0.2.6",
+    "ember-paper": "git://github.com/miguelcobain/ember-paper.git#b52f5fd861b09a4fb1",
     "ember-plupload": "1.13.6",
     "ember-websockets": "1.2.3",
     "glob": "^4.5.3",
