show last updated date

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-moment-shim": "0.6.2",
     "ember-cli-qunit": "0.3.15",
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "4.0.1",
@@ -36,6 +37,7 @@
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
+    "ember-moment": "3.6.2",
     "ember-paper": "git://github.com/miguelcobain/ember-paper.git#b52f5fd861b09a4fb1",
     "ember-plupload": "1.13.6",
     "ember-websockets": "1.2.3",
