--- a/bower.json
+++ b/bower.json
@@ -10,12 +10,14 @@
     "ember-qunit": "0.4.1",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
-    "matchMedia": "0.2.0",
+    "hammerjs": "~2.0.4",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1",
-    "hammerjs": "~2.0.4",
+    "matchMedia": "0.2.0",
+    "moment": ">= 2.8.0",
     "plupload": "v2.1.8",
-    "uri.js": "~1.16.0"
+    "qunit": "~1.17.1",
+    "uri.js": "~1.16.0",
+    "moment-timezone": ">= 0.1.0"
   }
 }
