process chunked uploads using temporary files

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "async": "1.4.2",
+    "concat-files": "^0.1.0",
     "dirStat": "0.0.2",
     "express": "^4.13.1",
     "jsDAV": "git://github.com/mnutt/jsDAV.git",
