--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "4.0.1",
     "ember-cli-uglify": "^1.0.1",
+    "ember-cli-vagrant-spk": "0.0.1",
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
