--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "plupload": "v2.1.8",
     "qunit": "~1.17.1",
     "uri.js": "~1.16.0",
-    "moment-timezone": ">= 0.1.0"
+    "moment-timezone": ">= 0.1.0",
+    "showdown": "~1.3.0"
   }
 }
