--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "qunit": "~1.17.1",
     "uri.js": "~1.16.0",
     "moment-timezone": ">= 0.1.0",
-    "showdown": "~1.3.0"
+    "showdown": "~1.3.0",
+    "photoswipe": "4.1.0"
   }
 }
