upgrade ember-cli and ember

--- a/package.json
+++ b/package.json
@@ -19,33 +19,33 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "1.13.1",
-    "ember-cli-app-version": "0.4.0",
-    "ember-cli-babel": "^5.0.0",
+    "broccoli-asset-rev": "^2.2.0",
+    "ember-cli": "1.13.12",
+    "ember-cli-app-version": "^1.0.0",
+    "ember-cli-babel": "^5.1.5",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.0",
-    "ember-cli-htmlbars": "0.7.9",
-    "ember-cli-htmlbars-inline-precompile": "^0.1.1",
-    "ember-cli-ic-ajax": "0.2.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-dependency-checker": "^1.1.0",
+    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-ic-ajax": "0.2.4",
+    "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-moment-shim": "0.6.2",
     "ember-cli-photoswipe": "git://github.com/mnutt/ember-cli-photoswipe.git#f5bfce5",
-    "ember-cli-qunit": "0.3.15",
-    "ember-cli-release": "0.2.3",
+    "ember-cli-qunit": "^1.0.4",
+    "ember-cli-release": "0.2.8",
     "ember-cli-sass": "4.0.1",
     "ember-cli-showdown": "2.5.0",
-    "ember-cli-uglify": "^1.0.1",
+    "ember-cli-sri": "^1.1.0",
+    "ember-cli-uglify": "^1.2.0",
     "ember-cli-vagrant-spk": "0.0.1",
-    "ember-data": "1.13.8",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.2",
+    "ember-data": "1.13.15",
+    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-export-application-global": "^1.0.4",
     "ember-moment": "3.6.2",
     "ember-paper": "git://github.com/miguelcobain/ember-paper.git#2466a5177f8",
     "ember-plupload": "1.13.7",
     "ember-websockets": "1.2.3",
-    "glob": "^4.5.3",
-    "liquid-fire": "0.21.0"
+    "glob": "^4.5.3"
   },
   "dependencies": {
     "async": "1.4.2",
