--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,21 @@
   "name": "davros",
   "dependencies": {
     "dinosheets": "0.0.1",
-    "ember": "1.13.8",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "1.13.8",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
-    "ember-qunit": "0.4.1",
-    "ember-qunit-notifications": "0.0.7",
-    "ember-resolver": "~0.1.18",
+    "ember": "1.13.10",
+    "ember-cli-shims": "0.0.6",
+    "ember-cli-test-loader": "0.2.1",
+    "ember-data": "1.13.15",
+    "ember-load-initializers": "0.1.7",
+    "ember-qunit": "0.4.16",
+    "ember-qunit-notifications": "0.1.0",
+    "ember-resolver": "~0.1.20",
     "hammerjs": "~2.0.4",
-    "jquery": "^1.11.1",
-    "loader.js": "ember-cli/loader.js#3.2.0",
+    "jquery": "^1.11.3",
+    "loader.js": "ember-cli/loader.js#3.2.1",
     "matchMedia": "0.2.0",
     "moment": ">= 2.8.0",
     "plupload": "v2.1.8",
-    "qunit": "~1.17.1",
+    "qunit": "~1.20.0",
     "uri.js": "~1.16.0",
     "moment-timezone": ">= 0.1.0",
     "showdown": "~1.3.0",
