--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "ember-resolver": "~0.1.20",
     "hammerjs": "~2.0.4",
     "jquery": "^1.11.3",
-    "loader.js": "ember-cli/loader.js#3.2.1",
+    "loader.js": "3.3.0",
     "matchMedia": "0.2.0",
     "moment": ">= 2.8.0",
     "plupload": "v2.1.8",
@@ -20,6 +20,7 @@
     "uri.js": "~1.16.0",
     "moment-timezone": ">= 0.1.0",
     "showdown": "~1.3.0",
-    "photoswipe": "4.1.0"
+    "photoswipe": "4.1.0",
+    "pretender": "^0.10.0"
   }
 }
