--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-moment-shim": "0.6.2",
     "ember-cli-photoswipe": "git://github.com/mnutt/ember-cli-photoswipe.git#f5bfce5",
+    "ember-cli-pretender": "0.5.0",
     "ember-cli-qunit": "^1.0.4",
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "4.0.1",
