--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "uri.js": "~1.16.0",
     "moment-timezone": ">= 0.1.0",
     "showdown": "~1.3.0",
-    "photoswipe": "4.1.0",
+    "photoswipe": "git://github.com/dimsemenov/PhotoSwipe.git#1a061a682cf4f",
     "pretender": "^0.10.0"
   }
 }
