--- a/bower.json
+++ b/bower.json
@@ -22,5 +22,8 @@
     "showdown": "~1.3.0",
     "photoswipe": "git://github.com/dimsemenov/PhotoSwipe.git#1a061a682cf4f",
     "pretender": "^0.10.0"
+  },
+  "resolutions": {
+    "loader.js": "3.3.0"
   }
 }
