--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,16 @@
   "name": "davros",
   "dependencies": {
     "dinosheets": "0.0.1",
-    "ember": "1.13.10",
+    "ember": "2.2.0",
     "ember-cli-shims": "0.0.6",
-    "ember-cli-test-loader": "0.2.1",
+    "ember-cli-test-loader": "0.2.2",
     "ember-load-initializers": "0.1.7",
     "ember-qunit": "0.4.16",
     "ember-qunit-notifications": "0.1.0",
     "ember-resolver": "~0.1.20",
     "hammerjs": "~2.0.4",
     "jquery": "^1.11.3",
-    "loader.js": "3.3.0",
+    "loader.js": "3.5.0",
     "matchMedia": "0.2.0",
     "moment": ">= 2.8.0",
     "plupload": "v2.1.8",
@@ -23,6 +23,6 @@
     "pretender": "^0.10.0"
   },
   "resolutions": {
-    "loader.js": "3.3.0"
+    "ember": "2.2.0"
   }
 }
