--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
-    "ember-cli": "1.13.12",
+    "ember-ajax": "0.7.1",
+    "ember-cli": "^2.2.0-beta.3",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.1.0",
+    "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
@@ -32,10 +33,11 @@
     "ember-cli-moment-shim": "0.7.1",
     "ember-cli-photoswipe": "git://github.com/mnutt/ember-cli-photoswipe.git#faa7409",
     "ember-cli-pretender": "0.5.0",
-    "ember-cli-qunit": "^1.0.4",
+    "ember-cli-qunit": "^1.1.0",
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "4.0.1",
     "ember-cli-showdown": "2.5.0",
+    "ember-cli-sri": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-cli-vagrant-spk": "0.0.1",
     "ember-disable-proxy-controllers": "^1.0.1",
@@ -52,6 +54,7 @@
     "concat-files": "^0.1.0",
     "dirStat": "0.0.2",
     "express": "^4.13.1",
+    "ember-resolver": "^2.0.3",
     "jsDAV": "git://github.com/mnutt/jsDAV.git#a1a7f9f90a17",
     "jsonapi-serializer": "^1.0.4",
     "mkdirp": "0.5.1",
