--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "moment-timezone": ">= 0.1.0",
     "showdown": "~1.3.0",
     "photoswipe": "4.1.1",
-    "pretender": "^0.10.0"
+    "pretender": "git://github.com/mnutt/pretender.git#6bef68069d90"
   },
   "resolutions": {
     "ember": "2.2.0"
