--- a/.sandstorm/Vagrantfile
+++ b/.sandstorm/Vagrantfile
@@ -15,7 +15,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   # Use a shell script to "provision" the box. This installs Sandstorm using
   # the bundled installer.
-  config.vm.provision "shell", inline: "sudo bash /opt/app/.sandstorm/global-setup.sh"
+  if ENV['FROM_SOURCE']
+    global_script = "global-setup-source.sh"
+  else
+    global_script = "global-setup.sh"
+  end
+
+  config.vm.provision "shell", inline: "sudo bash /opt/app/.sandstorm/#{global_script}"
   # Then, do stack-specific and app-specific setup.
   config.vm.provision "shell", inline: "sudo bash /opt/app/.sandstorm/setup.sh"
 
@@ -61,6 +67,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     override.vm.synced_folder "..", "/opt/app"
     override.vm.synced_folder ENV["HOME"] + "/.sandstorm", "/host-dot-sandstorm"
     override.vm.synced_folder "..", "/vagrant"
+
+    if ENV['FROM_SOURCE']
+      src_dir = File.expand_path("../src", __FILE__)
+      `mkdir #{src_dir}` unless Dir.exist?(src_dir)
+      override.vm.synced_folder src_dir, "/opt/sandstorm"
+    end
   end
   config.vm.provider :libvirt do |libvirt, override|
     libvirt.cpus = cpus
