--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "pretender": "git://github.com/mnutt/pretender.git#6bef68069d90"
   },
   "resolutions": {
-    "ember": "2.2.0"
+    "ember": "2.2.0",
+    "loader.js": "3.5.0"
   }
 }
