--- a/bower.json
+++ b/bower.json
@@ -2,20 +2,13 @@
   "name": "davros",
   "dependencies": {
     "dinosheets": "0.0.1",
-    "ember": "2.2.0",
-    "ember-cli-shims": "0.0.6",
+    "ember": "2.5.1",
+    "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
-    "ember-load-initializers": "0.1.7",
-    "ember-qunit": "0.4.16",
-    "ember-qunit-notifications": "0.1.0",
-    "ember-resolver": "~0.1.20",
     "hammerjs": "~2.0.4",
-    "jquery": "^1.11.3",
-    "loader.js": "3.5.0",
     "matchMedia": "0.2.0",
     "moment": ">= 2.8.0",
     "plupload": "v2.1.8",
-    "qunit": "~1.20.0",
     "uri.js": "~1.16.0",
     "moment-timezone": ">= 0.1.0",
     "showdown": "~1.3.0",
@@ -23,7 +16,6 @@
     "pretender": "git://github.com/mnutt/pretender.git#6bef68069d90"
   },
   "resolutions": {
-    "ember": "2.2.0",
-    "loader.js": "3.5.0"
+    "ember-qunit-notifications": "0.1.0"
   }
 }
