--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "ember": "2.5.1",
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
-    "hammerjs": "~2.0.4",
+    "hammer.js": "^2.0.8",
     "matchMedia": "0.2.0",
     "moment": ">= 2.8.0",
     "plupload": "v2.1.8",
