--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "dependencies": {
     "archiver": "^1.0.0",
     "async": "1.4.2",
-    "asyncjs": "git://github.com/fjakobs/async.js.git#bd61b6ae2cd7",
+    "asyncjs": "git://github.com/mnutt/async.js.git#28ddb08",
     "concat-files": "^0.1.0",
     "dirStat": "0.0.2",
     "ember-resolver": "^2.0.3",
