--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ before_install:
 install:
   - npm install
   - bower install
-  - pushd tmp
+  - mkdir -p tmp && cd tmp
   - wget http://www.webdav.org/neon/litmus/litmus-0.13.tar.gz
   - tar -zxf http://www.webdav.org/neon/litmus/litmus-0.13.tar.gz
-  - pushd litmus-0.13
+  - cd litmus-0.13
   - sed -i -e "s/T\(propfind_invalid2\),//g" src/props.c
   - ./configure && make
-  - popd; popd;
+  - cd ../..
 
 script:
   - npm test
