--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - wget http://www.webdav.org/neon/litmus/litmus-0.13.tar.gz
   - tar -zxf litmus-0.13.tar.gz
   - cd litmus-0.13
-  - sed -i -e "s/T\(propfind_invalid2\),//g" src/props.c
+  - sed -i -e "s/T(propfind_invalid2),//g" src/props.c
   - ./configure && make
   - cd ../..
 
