add litmus webdav test to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ sudo: false
 cache:
   directories:
     - node_modules
+    - ~/.npm
+
+env:
+  - PORT=6849
 
 before_install:
   - npm config set spin false
@@ -17,7 +21,19 @@ before_install:
 install:
   - npm install
   - bower install
+  - mkdir -p tmp && cd tmp
+  - wget http://www.webdav.org/neon/litmus/litmus-0.13.tar.gz
+  - tar -zxf litmus-0.13.tar.gz
+  - cd litmus-0.13
+  - sed -i -e "s/T(propfind_invalid2),//g" src/props.c # we're a bit more lax than the official dav spec, so we let this slide
+  - ./configure && make
+  - cd ../..
+
+before_script:
+  - npm run build
+  - node app.js &> /dev/null &
 
 script:
   - npm test
   - npm run test-server
+  - cd tmp/litmus-0.13 && make URL=http://127.0.0.1:6849/remote.php/webdav check
