--- a/bower.json
+++ b/bower.json
@@ -2,20 +2,17 @@
   "name": "davros",
   "dependencies": {
     "dinosheets": "0.0.1",
-    "ember": "2.5.1",
+    "ember": "~2.6.0",
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
     "hammer.js": "^2.0.8",
     "matchMedia": "0.2.0",
     "moment": ">= 2.8.0",
     "plupload": "v2.1.8",
-    "uri.js": "~1.16.0",
+    "urijs": "~1.16.0",
     "moment-timezone": ">= 0.1.0",
     "showdown": "~1.3.0",
     "photoswipe": "4.1.1",
     "pretender": "git://github.com/mnutt/pretender.git#6bef68069d90"
-  },
-  "resolutions": {
-    "ember-qunit-notifications": "0.1.0"
   }
 }
