--- a/package.json
+++ b/package.json
@@ -23,34 +23,33 @@
     "bower": "^1.7.9",
     "broccoli-asset-rev": "^2.4.2",
     "chai": "^3.5.0",
-    "ember-ajax": "0.7.1",
-    "ember-cli": "2.5.0",
+    "ember-cli": "2.6.3",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.3",
+    "ember-cli-htmlbars": "^1.0.8",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
-    "ember-cli-moment-shim": "0.7.1",
+    "ember-cli-moment-shim": "^2.0.0",
     "ember-cli-photoswipe": "git://github.com/mnutt/ember-cli-photoswipe.git#8606017",
     "ember-cli-pretender": "0.5.0",
     "ember-cli-qunit": "^1.4.0",
-    "ember-cli-sass": "4.0.1",
-    "ember-cli-showdown": "2.5.0",
+    "ember-cli-release": "^0.2.9",
+    "ember-cli-sass": "5.3.1",
+    "ember-cli-showdown": "2.7.2",
     "ember-cli-uglify": "^1.2.0",
     "ember-cli-vagrant-spk": "0.0.1",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
-    "ember-moment": "5.0.1",
+    "ember-moment": "6.1.0",
     "ember-network": "^0.3.0",
     "ember-paper": "git://github.com/mnutt/ember-paper.git#6e6d391",
-    "ember-plupload": "1.13.12",
+    "ember-plupload": "1.13.14",
     "ember-route-action-helper": "0.3.1",
     "ember-transition-helper": "0.0.6",
-    "ember-websockets": "1.2.3",
+    "ember-websockets": "4.0.1",
     "glob": "^4.5.3",
     "loader.js": "^4.0.1",
     "mocha": "^2.5.3",
