--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "bower": "^1.7.9",
     "broccoli-asset-rev": "^2.4.2",
+    "ember-ajax": "0.7.1",
     "chai": "^3.5.0",
     "ember-cli": "2.6.3",
     "ember-cli-app-version": "^1.0.0",
@@ -64,6 +65,7 @@
     "dirStat": "0.0.2",
     "ember-resolver": "^2.0.3",
     "express": "^4.13.1",
+    "imagemagick-stream": "^4.1.0",
     "jsDAV": "git://github.com/mnutt/jsDAV.git#e28bac7",
     "jsonapi-serializer": "^1.0.4",
     "mkdirp": "0.5.1",
