--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-cli-vagrant-spk": "0.0.1",
+    "ember-concurrency": "0.7.8",
     "ember-export-application-global": "^1.0.5",
+    "ember-file-upload": "2.0.0-beta.15",
     "ember-load-initializers": "^0.5.1",
     "ember-moment": "6.1.0",
     "ember-network": "^0.3.0",
     "ember-paper": "git://github.com/mnutt/ember-paper.git#dd9ed6b1783",
-    "ember-plupload": "1.13.15",
     "ember-route-action-helper": "0.3.3",
     "ember-transition-helper": "0.0.6",
     "ember-websockets": "4.0.1",
