switch out native dialogs with ember-paper ones

--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "ember-load-initializers": "^0.5.1",
     "ember-moment": "6.1.0",
     "ember-network": "^0.3.0",
-    "ember-paper": "git://github.com/mnutt/ember-paper.git#dd9ed6b1783",
+    "ember-paper": "git://github.com/mnutt/ember-paper.git#54d479e",
     "ember-plupload": "1.13.15",
     "ember-route-action-helper": "0.3.3",
+    "ember-tether": "0.3.1",
+    "ember-tooltips": "2.0.1",
     "ember-transition-helper": "0.0.6",
     "ember-websockets": "4.0.1",
     "glob": "^7.0.5",
