add support for public URL links

--- a/package.json
+++ b/package.json
@@ -63,11 +63,13 @@
     "archiver": "^1.0.0",
     "async": "1.4.2",
     "asyncjs": "git://github.com/mnutt/async.js.git#28ddb08",
+    "child-process-promise": "^2.1.3",
     "compression": "^1.6.2",
     "concat-files": "^0.1.0",
     "dirStat": "0.0.2",
     "ember-resolver": "^2.0.3",
     "express": "^4.13.1",
+    "fs-promise": "^0.5.0",
     "imagemagick-stream": "^4.1.0",
     "jsDAV": "git://github.com/mnutt/jsDAV.git#e28bac7",
     "jsonapi-serializer": "^1.0.4",
