--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.7.9",
-    "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "0.7.1",
+    "broccoli-asset-rev": "^2.4.5",
     "chai": "^3.5.0",
-    "ember-cli": "^2.8.0-beta.1",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.6",
+    "ember-ajax": "^2.4.1",
+    "ember-cli": "^2.10.0",
+    "ember-cli-app-version": "^2.0.0",
+    "ember-cli-babel": "^5.1.7",
     "ember-cli-content-security-policy": "0.5.0",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.8",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-jshint": "^1.0.0",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-htmlbars": "^1.0.10",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-jshint": "^2.0.1",
     "ember-cli-moment-shim": "^2.0.0",
     "ember-cli-photoswipe": "git://github.com/mnutt/ember-cli-photoswipe.git#8606017",
     "ember-cli-pretender": "0.6.0",
-    "ember-cli-qunit": "^2.1.0",
+    "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "5.4.0",
     "ember-cli-showdown": "2.7.2",
@@ -49,7 +49,7 @@
     "ember-network": "^0.3.0",
     "ember-paper": "git://github.com/mnutt/ember-paper.git#422d81e",
     "ember-plupload": "1.13.15",
-    "ember-route-action-helper": "0.3.3",
+    "ember-route-action-helper": "2.0.1",
     "ember-tether": "0.3.1",
     "ember-tooltips": "2.0.1",
     "ember-transition-helper": "0.0.6",
@@ -73,7 +73,7 @@
     "imagemagick-stream": "^4.1.0",
     "jsDAV": "git://github.com/mnutt/jsDAV.git#0556df11183",
     "jsonapi-serializer": "^1.0.4",
-    "loader.js": "^4.0.1",
+    "loader.js": "^4.0.10",
     "mkdirp": "0.5.1",
     "morgan": "^1.6.1",
     "multiparty": "4.1.2",
