--- a/package.json
+++ b/package.json
@@ -33,51 +33,51 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
-    "ember-cli-moment-shim": "^2.0.0",
+    "ember-cli-moment-shim": "^3.0.1",
     "ember-cli-photoswipe": "git://github.com/mnutt/ember-cli-photoswipe.git#8606017",
-    "ember-cli-pretender": "0.6.0",
+    "ember-cli-pretender": "0.7.0",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
-    "ember-cli-sass": "5.4.0",
-    "ember-cli-showdown": "2.7.2",
+    "ember-cli-sass": "5.6.0",
+    "ember-cli-showdown": "2.9.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-cli-vagrant-spk": "0.0.1",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
-    "ember-moment": "6.1.0",
-    "ember-network": "^0.3.0",
-    "ember-paper": "git://github.com/mnutt/ember-paper.git#422d81e",
-    "ember-plupload": "1.13.15",
+    "ember-moment": "7.1.1",
+    "ember-network": "^0.3.1",
+    "ember-paper": "git://github.com/mnutt/ember-paper.git#99310c4",
+    "ember-plupload": "1.13.18",
     "ember-route-action-helper": "2.0.1",
     "ember-tether": "0.3.1",
-    "ember-tooltips": "2.0.1",
+    "ember-tooltips": "2.5.0",
     "ember-transition-helper": "0.0.6",
-    "ember-websockets": "4.0.1",
-    "glob": "^7.0.5",
-    "mocha": "^2.5.3",
-    "supertest": "^2.0.0",
+    "ember-websockets": "6.2.2",
+    "glob": "^7.1.1",
+    "mocha": "^3.2.0",
+    "pretender": "1.3.0",
+    "supertest": "^2.0.1",
     "xmldoc": "^0.5.1"
   },
   "dependencies": {
-    "archiver": "^1.0.0",
-    "async": "1.4.2",
+    "archiver": "^1.3.0",
+    "async": "2.1.4",
     "asyncjs": "git://github.com/mnutt/async.js.git#28ddb08",
-    "child-process-promise": "^2.1.3",
+    "child-process-promise": "^2.2.0",
     "compression": "^1.6.2",
-    "concat-files": "^0.1.0",
+    "concat-files": "^0.1.1",
     "dirStat": "0.0.2",
     "ember-resolver": "^2.0.3",
-    "express": "^4.13.1",
-    "fs-promise": "^0.5.0",
-    "imagemagick-stream": "^4.1.0",
+    "express": "^4.14.0",
+    "fs-promise": "^1.0.0",
+    "imagemagick-stream": "^4.1.1",
     "jsDAV": "git://github.com/mnutt/jsDAV.git#0556df11183",
-    "jsonapi-serializer": "^1.0.4",
     "loader.js": "^4.0.10",
     "mkdirp": "0.5.1",
     "morgan": "^1.6.1",
     "multiparty": "4.1.2",
     "walker": "^1.0.7",
-    "ws": "^0.8.0"
+    "ws": "^1.1.1"
   }
 }
