--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "archiver": "^1.3.0",
     "async": "2.1.4",
     "asyncjs": "https://github.com/mnutt/async.js.git#28ddb08",
+    "cache-require-paths": "0.3.0",
     "child-process-promise": "^2.2.0",
     "compression": "^1.6.2",
     "concat-files": "^0.1.1",
