upgrade to ember-cli 2.14-beta

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /coverage/*
 /libpeerconnection.log
 npm-debug.log*
+yarn-error.log
 testem.log
 /.cache-require-paths.json
 
@@ -22,3 +23,8 @@ testem.log
 /data/*
 /.jsdav
 /config/domain
+
+# ember-try
+.node_modules.ember-try/
+bower.json.ember-try
+package.json.ember-try
