--- a/.travis.yml
+++ b/.travis.yml
@@ -4,22 +4,22 @@ node_js:
   - "6"
 
 sudo: false
+dist: trusty
 
 cache:
-  directories:
-    - node_modules
-    - ~/.npm
+  yarn: true
 
 env:
   - PORT=6849
+  - BROWSER=Chrome
 
-before_install:
-  - npm config set spin false
-  - npm install -g bower
-  - npm install phantomjs-prebuilt
+addons:
+  apt:
+    packages:
+      - google-chrome-stable
 
 install:
-  - npm install
+  - yarn install
   - bower install
   - mkdir -p tmp && cd tmp
   - wget http://www.webdav.org/neon/litmus/litmus-0.13.tar.gz
@@ -34,6 +34,6 @@ before_script:
   - node app.js &> /dev/null &
 
 script:
-  - npm test
+  - yarn test
   - npm run test-server
   - cd tmp/litmus-0.13 && make URL=http://127.0.0.1:6849/remote.php/webdav check
