--- a/bower.json
+++ b/bower.json
@@ -2,12 +2,12 @@
   "name": "davros",
   "dependencies": {
     "dinosheets": "0.0.1",
-    "moment": ">= 2.8.0",
-    "plupload": "v2.1.8",
-    "urijs": "~1.16.0",
-    "moment-timezone": ">= 0.1.0",
-    "showdown": "~1.3.0",
-    "photoswipe": "4.1.1",
+    "moment": "~2.18.1",
+    "plupload": "2.3.1",
+    "urijs": "~1.18.10",
+    "moment-timezone": ">= 0.5.13",
+    "showdown": "~1.7.1",
+    "photoswipe": "4.1.2",
     "pretender": "git://github.com/mnutt/pretender.git#6bef68069d90"
   }
 }
