--- a/package.json
+++ b/package.json
@@ -11,75 +11,75 @@
     "start": "node_modules/.bin/ember server",
     "build": "ember build",
     "test": "ember test",
-    "test-server": "node_modules/.bin/mocha tests/server/*.js"
+    "test-server": "node_modules/.bin/mocha server/tests/*.js"
   },
   "repository": "",
   "engines": {
-    "node": ">= 4"
+    "node": ">= 6"
   },
   "author": "Michael Nutt <michael@nutt.im>",
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.8.0",
     "broccoli-asset-rev": "^2.4.5",
-    "chai": "^3.5.0",
-    "ember-ajax": "^2.5.4",
-    "ember-cli": "2.12.0-beta.1",
-    "ember-cli-app-version": "^2.0.0",
-    "ember-cli-babel": "^5.1.7",
-    "ember-cli-content-security-policy": "0.5.0",
+    "chai": "^4.0.2",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "~2.14.0-beta.2",
+    "ember-cli-app-version": "^3.0.0",
+    "ember-cli-babel": "^6.4.1",
+    "ember-cli-babili": "^0.2.0",
+    "ember-cli-content-security-policy": "0.6.1",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.2",
-    "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-moment-shim": "^3.0.1",
+    "ember-cli-moment-shim": "^3.3.1",
     "ember-cli-photoswipe": "https://github.com/mnutt/ember-cli-photoswipe.git#8606017",
     "ember-cli-pretender": "1.0.1",
-    "ember-cli-qunit": "^3.1.1",
-    "ember-cli-sass": "6.1.1",
-    "ember-cli-shims": "^1.0.2",
-    "ember-cli-showdown": "2.9.0",
+    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-sass": "6.2.0",
+    "ember-cli-shims": "^1.1.0",
+    "ember-cli-showdown": "3.2.1",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
     "ember-cli-vagrant-spk": "0.0.1",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.6.0",
-    "ember-moment": "7.1.1",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-moment": "7.3.1",
     "ember-network": "^0.3.1",
     "ember-paper": "https://github.com/mnutt/ember-paper.git#321206a",
-    "ember-plupload": "1.13.18",
-    "ember-route-action-helper": "2.0.2",
-    "ember-source": "^2.12.0-beta.1",
+    "ember-plupload": "1.13.19",
+    "ember-route-action-helper": "2.0.3",
+    "ember-source": "^2.14.0-beta.3",
     "ember-tether": "0.4.1",
     "ember-tooltips": "2.8.2",
     "ember-websockets": "https://github.com/mnutt/ember-websockets.git#6beb30016",
-    "glob": "^7.1.1",
-    "mocha": "^3.2.0",
-    "mock-socket": "^6.0.1",
+    "glob": "^7.1.2",
+    "mocha": "^3.4.2",
+    "mock-socket": "^6.1.0",
     "pretender": "1.4.2",
-    "supertest": "^2.0.1",
-    "xmldoc": "^0.5.1"
+    "supertest": "^3.0.0",
+    "xmldoc": "^1.1.0"
   },
   "dependencies": {
     "archiver": "^1.3.0",
-    "async": "2.1.4",
+    "async": "2.4.1",
     "asyncjs": "https://github.com/mnutt/async.js.git#28ddb08",
     "cache-require-paths": "0.3.0",
-    "child-process-promise": "^2.2.0",
+    "child-process-promise": "^2.2.1",
     "compression": "^1.6.2",
     "concat-files": "^0.1.1",
     "dirStat": "0.0.2",
-    "ember-resolver": "^2.0.3",
-    "express": "^4.14.1",
-    "fs-promise": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "express": "^4.15.3",
+    "fs-promise": "^2.0.3",
     "imagemagick-stream": "^4.1.1",
     "jsDAV": "https://github.com/mnutt/jsDAV.git#0556df11183",
-    "loader.js": "^4.1.0",
+    "loader.js": "^4.2.3",
     "mkdirp": "0.5.1",
-    "morgan": "^1.8.0",
+    "morgan": "^1.8.2",
     "multiparty": "4.1.3",
     "walker": "^1.0.7",
-    "ws": "^2.0.2"
+    "ws": "^3.0.0"
   }
 }
