switch from ember-plupload to simpler ember-file-upload

--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "ember-cli-showdown": "3.2.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-vagrant-spk": "0.0.1",
+    "ember-concurrency": "0.8.6",
     "ember-export-application-global": "^2.0.0",
+    "ember-file-upload": "https://github.com/mnutt/ember-file-upload.git#6b03e01",
     "ember-load-initializers": "^1.0.0",
     "ember-moment": "7.3.1",
     "ember-network": "^0.3.1",
     "ember-paper": "https://github.com/mnutt/ember-paper.git#321206a",
-    "ember-plupload": "1.13.19",
     "ember-route-action-helper": "2.0.3",
     "ember-source": "^2.14.0-beta.3",
     "ember-tether": "0.4.1",
