upgrade more dependencies

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-moment-shim": "^3.3.1",
-    "ember-cli-photoswipe": "https://github.com/mnutt/ember-cli-photoswipe.git#8606017",
+    "ember-cli-photoswipe": "https://github.com/mnutt/ember-cli-photoswipe.git#4acd9fb",
     "ember-cli-pretender": "1.0.1",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-sass": "6.2.0",
@@ -49,12 +49,12 @@
     "ember-load-initializers": "^1.0.0",
     "ember-moment": "7.3.1",
     "ember-network": "^0.3.1",
-    "ember-paper": "https://github.com/mnutt/ember-paper.git#321206a",
+    "ember-paper": "https://github.com/mnutt/ember-paper.git#39365fb",
     "ember-route-action-helper": "2.0.3",
     "ember-source": "^2.14.0-beta.3",
     "ember-tether": "0.4.1",
     "ember-tooltips": "2.8.2",
-    "ember-websockets": "https://github.com/mnutt/ember-websockets.git#6beb30016",
+    "ember-websockets": "7.0.3",
     "glob": "^7.1.2",
     "mocha": "^3.4.2",
     "mock-socket": "^6.1.0",
