--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ addons:
       - google-chrome-stable
 
 install:
-  - yarn install --non-interactive
+  - yarn install
   - bower install
   - mkdir -p tmp && cd tmp
   - wget http://www.webdav.org/neon/litmus/litmus-0.13.tar.gz
