--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "broccoli-asset-rev": "^2.4.5",
     "chai": "^4.0.2",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "^2.14.0",
+    "ember-cli": "^2.18.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.4.1",
     "ember-cli-babili": "^0.2.0",
@@ -42,6 +42,7 @@
     "ember-cli-shims": "^1.1.0",
     "ember-cli-showdown": "3.2.1",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-update": "^0.52.1",
     "ember-cli-vagrant-spk": "0.0.1",
     "ember-concurrency": "0.8.6",
     "ember-export-application-global": "^2.0.0",
