--- a/package.json
+++ b/package.json
@@ -23,26 +23,23 @@
   "devDependencies": {
     "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
-    "bower": "^1.8.0",
     "broccoli-asset-rev": "^2.7.0",
-    "chai": "^4.0.2",
     "ember-ajax": "^3.1.0",
     "ember-cli": "^3.4.4",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^6.16.0",
-    "ember-cli-babili": "^0.2.0",
     "ember-cli-content-security-policy": "0.6.1",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-moment-shim": "^3.3.1",
+    "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-photoswipe": "https://github.com/mnutt/ember-cli-photoswipe.git#4acd9fb",
-    "ember-cli-pretender": "1.0.1",
+    "ember-cli-pretender": "3.2.0",
     "ember-cli-qunit": "^4.3.2",
-    "ember-cli-sass": "6.2.0",
-    "ember-cli-showdown": "3.2.1",
+    "ember-cli-sass": "^10.0.1",
+    "ember-cli-showdown": "^4.4.4",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-update": "^0.52.1",
@@ -52,20 +49,23 @@
     "ember-file-upload": "https://github.com/mnutt/ember-file-upload.git#6b03e01",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-moment": "7.3.1",
+    "ember-moment": "^8.0.0",
     "ember-network": "^0.3.1",
     "ember-paper": "https://github.com/mnutt/ember-paper.git#39365fb",
-    "ember-route-action-helper": "2.0.3",
+    "ember-resolver": "^5.0.1",
+    "ember-route-action-helper": "^2.0.8",
     "ember-source": "^3.4.0",
-    "ember-tether": "0.4.1",
-    "ember-tooltips": "2.8.2",
-    "ember-websockets": "7.0.3",
+    "ember-tether": "^1.0.0",
+    "ember-tooltips": "3.4.2",
+    "ember-websockets": "7.2.0",
     "glob": "^7.1.2",
+    "loader.js": "^4.7.0",
     "mocha": "^3.4.2",
     "mock-socket": "^6.1.0",
     "pretender": "1.4.2",
     "qunit-dom": "^0.7.1",
-    "supertest": "^3.0.0",
+    "sass": "^1.25.0",
+    "supertest": "^4.0.2",
     "xmldoc": "^1.1.0"
   },
   "dependencies": {
@@ -73,16 +73,15 @@
     "async": "2.4.1",
     "asyncjs": "https://github.com/mnutt/async.js.git#28ddb08",
     "cache-require-paths": "0.3.0",
+    "chai": "^4.0.2",
     "child-process-promise": "^2.2.1",
     "compression": "^1.7.4",
     "concat-files": "^0.1.1",
     "dirStat": "0.0.2",
-    "ember-resolver": "^5.0.1",
     "express": "^4.17.1",
     "fs-promise": "^2.0.3",
     "imagemagick-stream": "^4.1.1",
     "jsDAV": "https://github.com/mnutt/jsDAV.git#0556df11183",
-    "loader.js": "^4.7.0",
     "mkdirp": "1.0.3",
     "morgan": "^1.9.1",
     "multiparty": "4.2.1",
