--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.7.0",
-    "ember-ajax": "^3.1.0",
-    "ember-cli": "^3.4.4",
+    "ember-ajax": "^5.0.0",
+    "ember-cli": "^3.8.3",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^6.16.0",
+    "ember-cli-babel": "^7.1.2",
     "ember-cli-content-security-policy": "0.6.1",
-    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
@@ -37,7 +37,6 @@
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-photoswipe": "https://github.com/mnutt/ember-cli-photoswipe.git#4acd9fb",
     "ember-cli-pretender": "3.2.0",
-    "ember-cli-qunit": "^4.3.2",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-showdown": "^4.4.4",
     "ember-cli-sri": "^2.1.1",
@@ -52,9 +51,10 @@
     "ember-moment": "^8.0.0",
     "ember-network": "^0.3.1",
     "ember-paper": "https://github.com/mnutt/ember-paper.git#39365fb",
+    "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
     "ember-route-action-helper": "^2.0.8",
-    "ember-source": "^3.4.0",
+    "ember-source": "^3.8.0",
     "ember-tether": "^1.0.0",
     "ember-tooltips": "3.4.2",
     "ember-websockets": "7.2.0",
@@ -63,7 +63,7 @@
     "mocha": "^3.4.2",
     "mock-socket": "^6.1.0",
     "pretender": "1.4.2",
-    "qunit-dom": "^0.7.1",
+    "qunit-dom": "^0.8.0",
     "sass": "^1.25.0",
     "supertest": "^4.0.2",
     "xmldoc": "^1.1.0"
