--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
   },
   "repository": "",
   "engines": {
-    "node": "6.* || 8.* || >= 10.*"
+    "node": "8.* || >= 10.*"
   },
   "license": "MIT",
   "devDependencies": {
-    "@ember/jquery": "^0.5.2",
-    "@ember/optional-features": "^0.6.3",
-    "broccoli-asset-rev": "^2.7.0",
+    "@ember/jquery": "^0.6.0",
+    "@ember/optional-features": "^0.7.0",
+    "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^5.0.0",
-    "ember-cli": "^3.8.3",
+    "ember-cli": "^3.12.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.1.2",
+    "ember-cli-babel": "^7.7.3",
     "ember-cli-content-security-policy": "0.6.1",
     "ember-cli-dependency-checker": "^3.1.0",
-    "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-eslint": "^5.1.0",
+    "ember-cli-htmlbars": "^3.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-photoswipe": "https://github.com/mnutt/ember-cli-photoswipe.git#4acd9fb",
@@ -46,24 +46,25 @@
     "ember-concurrency": "0.8.6",
     "ember-export-application-global": "^2.0.0",
     "ember-file-upload": "https://github.com/mnutt/ember-file-upload.git#6b03e01",
-    "ember-load-initializers": "^1.1.0",
+    "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^8.0.0",
     "ember-network": "^0.3.1",
     "ember-paper": "https://github.com/mnutt/ember-paper.git#39365fb",
-    "ember-qunit": "^3.4.1",
+    "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
     "ember-route-action-helper": "^2.0.8",
-    "ember-source": "^3.8.0",
+    "ember-source": "^3.12.0",
     "ember-tether": "^1.0.0",
     "ember-tooltips": "3.4.2",
     "ember-websockets": "7.2.0",
+    "eslint-plugin-node": "^9.0.1",
     "glob": "^7.1.2",
     "loader.js": "^4.7.0",
     "mocha": "^3.4.2",
     "mock-socket": "^6.1.0",
     "pretender": "1.4.2",
-    "qunit-dom": "^0.8.0",
+    "qunit-dom": "^0.8.4",
     "sass": "^1.25.0",
     "supertest": "^4.0.2",
     "xmldoc": "^1.1.0"
