--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ember-cli-htmlbars": "^4.2.2",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-moment-shim": "^3.7.1",
+    "ember-cli-pretender": "^3.2.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-showdown": "^4.4.4",
     "ember-cli-sri": "^2.1.1",
@@ -85,7 +86,6 @@
     "loader.js": "^4.7.0",
     "mocha": "^3.4.2",
     "mock-socket": "^6.1.0",
-    "pretender": "1.4.2",
     "prettier": "^1.19.1",
     "qunit-dom": "^1.0.0",
     "sass": "^1.25.0",
