--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "xmldoc": "^1.1.2"
   },
   "engines": {
-    "node": "10.* || >= 12"
+    "node": ">= 14"
   },
   "ember": {
     "edition": "octane"
