--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,7 @@ testem.log
 # ember-try
 /.node_modules.ember-try/
 /bower.json.ember-try
+/npm-shrinkwrap.json.ember-try
 /package.json.ember-try
+/package-lock.json.ember-try
+/yarn.lock.ember-try
