upgrade dependencies and use full git shas for git npm modules

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "archiver": "^5.3.0",
     "async": "^3.2.1",
-    "asyncjs": "https://github.com/mnutt/async.js.git#ad52b32",
+    "asyncjs": "https://github.com/mnutt/async.js.git#ad52b322176a88ef55c76052a9b3a8aa8bd6e083",
     "cache-require-paths": "0.3.0",
     "chai": "^4.0.2",
     "child-process-promise": "^2.2.1",
@@ -41,7 +41,7 @@
     "fs-promise": "^2.0.3",
     "image-size": "^1.0.0",
     "imagemagick-stream": "^4.1.1",
-    "jsDAV": "https://github.com/mnutt/jsDAV.git#f2dc9bdfc4f8802faeaddedb061fd546c540eb2b",
+    "jsDAV": "https://github.com/mnutt/jsDAV.git#5dc07f7f47134bf51469306aa0af283e5e438590",
     "mkdirp": "^1.0.4",
     "morgan": "^1.10.0",
     "multiparty": "^4.2.2",
@@ -51,44 +51,44 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
-    "@ember/render-modifiers": "^1.0.2",
+    "@ember/render-modifiers": "^2.0.2",
     "@ember/test-helpers": "^2.6.0",
-    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
     "@tailwindcss/forms": "^0.3.3",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "date-fns": "^2.23.0",
+    "date-fns": "^2.27.0",
     "ember-auto-import": "^2.2.4",
-    "ember-basic-dropdown": "^3.0.19",
+    "ember-basic-dropdown": "^4.0.2",
     "ember-cli": "^4.0.1",
     "ember-cli-app-version": "^5.0.0",
-    "ember-cli-babel": "^7.26.8",
+    "ember-cli-babel": "^7.26.11",
     "ember-cli-content-security-policy": "^1.1.1",
     "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-deprecation-workflow": "^1.0.1",
+    "ember-cli-deprecation-workflow": "^2.1.0",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-postcss": "^7.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-cli-vagrant-spk": "https://github.com/mnutt/ember-cli-vagrant-spk.git#e53e15b78a9299",
-    "ember-concurrency": "^2.1.2",
+    "ember-cli-vagrant-spk": "https://github.com/mnutt/ember-cli-vagrant-spk.git#e53e15b78a9299119456c8df493699b6faed0cd4",
+    "ember-concurrency": "^2.2.0",
     "ember-concurrency-decorators": "^2.0.3",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
-    "ember-file-upload": "^4.0.0",
-    "ember-href-to": "^4.1.0",
+    "ember-file-upload": "^5.0.0-beta.1",
+    "ember-href-to": "^5.0.0",
     "ember-load-initializers": "^2.1.2",
     "ember-page-title": "^7.0.0",
-    "ember-photoswipe": "https://github.com/mnutt/ember-photoswipe.git#610afe8",
+    "ember-photoswipe": "https://github.com/mnutt/ember-photoswipe.git#610afe8dd775f0b856b1f87df363beb014e290e1",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
     "ember-showdown": "^1.0.0-beta.1",
     "ember-source": "^4.0.1",
     "ember-template-lint": "^3.15.0",
-    "ember-tooltips": "^3.4.7",
+    "ember-tooltips": "^3.5.1",
     "ember-websockets": "^8.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -96,7 +96,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-qunit": "^7.2.0",
-    "glob": "^7.1.7",
+    "glob": "^7.2.0",
     "loader.js": "^4.7.0",
     "mocha": "^3.4.2",
     "node-loader": "^1.0.2",
@@ -108,9 +108,9 @@
     "qunit-dom": "^2.0.0",
     "supertest": "^6.1.5",
     "tailwindcss": "^2.2.7",
-    "tracked-built-ins": "^1.1.1",
+    "tracked-built-ins": "^2.0.1",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.8.0",
+    "webpack-cli": "^4.9.1",
     "xmldoc": "^1.1.2"
   },
   "engines": {
